// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > scenario should handle add bundle 1`] = `
Object {
  "bundles": Array [
    Object {
      "id": "1",
    },
  ],
  "bundlesById": Object {
    "1": Object {
      "id": "1",
    },
  },
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": null,
  "modificationsById": null,
  "modificationsByType": null,
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle add scenario 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": null,
  "modificationsById": null,
  "modificationsByType": null,
  "scenarios": Array [
    Object {
      "id": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "id": "1",
    },
  },
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle default state 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": null,
  "modificationsById": null,
  "modificationsByType": null,
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle delete bundle 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
}
`;

exports[`reducers > scenario should handle delete modification 1`] = `
Object {
  "modifications": Array [],
  "modificationsById": Object {},
  "modificationsByType": Object {},
}
`;

exports[`reducers > scenario should handle delete scenario 1`] = `
Object {
  "currentBundle": null,
  "currentScenario": null,
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle log out 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": null,
  "modificationsById": null,
  "modificationsByType": null,
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle set bundle 1`] = `
Object {
  "bundlesById": Object {
    "1": Object {
      "id": "1",
    },
  },
  "currentBundle": "1",
  "currentScenario": Object {
    "bundleId": undefined,
  },
}
`;

exports[`reducers > scenario should handle set bundles 1`] = `
Object {
  "bundles": Array [
    Object {
      "id": "1",
    },
  ],
  "bundlesById": Object {
    "1": Object {
      "id": "1",
    },
  },
  "currentBundle": Object {
    "id": "1",
  },
  "currentScenario": Object {
    "bundleId": "1",
  },
}
`;

exports[`reducers > scenario should handle set feeds 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [
    Object {
      "id": "1",
    },
  ],
  "feedsById": Object {
    "1": Object {
      "id": "1",
    },
  },
  "modifications": null,
  "modificationsById": null,
  "modificationsByType": null,
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle set modification 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [
    Object {
      "id": "1",
      "type": "adjust-dwell-time",
    },
  ],
  "modificationsById": Object {
    "1": Object {
      "id": "1",
      "type": "adjust-dwell-time",
    },
  },
  "modificationsByType": Object {
    "adjust-dwell-time": Array [
      Object {
        "id": "1",
        "type": "adjust-dwell-time",
      },
    ],
  },
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle set modifications 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [
    Object {
      "id": "1",
      "type": "adjust-dwell-time",
    },
  ],
  "modificationsById": Object {
    "1": Object {
      "id": "1",
      "type": "adjust-dwell-time",
    },
  },
  "modificationsByType": Object {
    "adjust-dwell-time": Array [
      Object {
        "id": "1",
        "type": "adjust-dwell-time",
      },
    ],
  },
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle set scenario 1`] = `
Object {
  "bundlesById": Object {
    "1": Object {
      "id": "1",
    },
  },
  "currentBundle": Object {
    "id": "1",
  },
  "currentScenario": Object {
    "bundleId": "1",
    "id": "1",
  },
  "scenarios": Array [
    Object {
      "bundleId": "1",
      "id": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "bundleId": "1",
      "id": "1",
    },
  },
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle set scenarios 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": null,
  "modificationsById": null,
  "modificationsByType": null,
  "scenarios": Array [
    Object {
      "id": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "id": "1",
    },
  },
  "variants": Array [],
}
`;

exports[`reducers > scenario should handle show variant 1`] = `
Object {
  "modifications": Array [
    Object {
      "id": "1",
      "showOnMap": undefined,
      "type": "adjust-dwell-time",
      "variants": Array [],
    },
  ],
  "modificationsById": Object {
    "1": Object {
      "id": "1",
      "showOnMap": undefined,
      "type": "adjust-dwell-time",
      "variants": Array [],
    },
  },
  "modificationsByType": Object {
    "adjust-dwell-time": Array [
      Object {
        "id": "1",
        "showOnMap": undefined,
        "type": "adjust-dwell-time",
        "variants": Array [],
      },
    ],
  },
}
`;

exports[`reducers > scenario should handle update variant 1`] = `
Object {
  "variants": Array [
    "foo",
  ],
}
`;

exports[`reducers > scenario should handle update variants with acceptable payload 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": null,
  "modificationsById": null,
  "modificationsByType": null,
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [
    "foo",
  ],
}
`;

exports[`reducers > scenario should handle update variants with null payload 1`] = `
Object {
  "bundles": Array [],
  "bundlesById": Object {},
  "currentBundle": null,
  "currentScenario": null,
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": null,
  "modificationsById": null,
  "modificationsByType": null,
  "scenarios": Array [],
  "scenariosById": Object {},
  "variants": Array [],
}
`;
